Final VGG16-4 models version

--- a/Keras Approach/VGG_4_models.ipynb
+++ b/Keras Approach/VGG_4_models.ipynb
@@ -67,8 +67,6 @@
       },
       "outputs": [],
       "source": [
-        "\n",
-        "\n",
         "import tensorflow as tf\n",
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
         "from tensorflow.keras import layers\n",
@@ -96,6 +94,15 @@
       ],
       "metadata": {
         "id": "kS8kR0GRR5Hy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "One needs a kaggle.json file in order to load the dataset from kaggle"
+      ],
+      "metadata": {
+        "id": "h340-9tnz4H7"
       }
     },
     {
@@ -232,7 +239,7 @@
       "source": [
         "\n",
         "def architecture(m1, m2, name1, name2):\n",
-        "  font_path = '/content/Arial.ttf'\n",
+        "  font_path = '/content/Arial.ttf' #There is an issue with loading fonts in collab, so i manually upload the ttf file for font\n",
         "  font = ImageFont.truetype(font_path, 22)\n",
         "  color_map = defaultdict(dict)\n",
         "  color_map[Conv2D]['fill'] = 'orange'\n",
@@ -251,7 +258,7 @@
         "  image2 = Image.open(f'/content/{name2}.png')\n",
         "  width = max(image1.width, image2.width)\n",
         "\n",
-        "\n",
+        "  #Code to combine the two archtitecture\n",
         "  concatenated_image = Image.fromarray(np.ones((image1.height + image2.height, width, 3), dtype=np.uint8) * 255)\n",
         "  concatenated_image.paste(image1, (0, 0))\n",
         "  concatenated_image.paste(image2, (0, image1.height))\n",
@@ -370,8 +377,13 @@
     {
       "cell_type": "code",
       "source": [
+        "#Defining the variable for early stopping\n",
         "es = EarlyStopping(monitor='val_accuracy', mode='max', patience=10,  restore_best_weights=True)\n",
+        "#defining the optimizer\n",
         "vgg_model_1.compile(optimizer=Adam(learning_rate=0.001),loss='categorical_crossentropy',metrics=['accuracy'])\n",
+        "#for recoring execution time\n",
+        "#  (we did not use execution time in evaluation metrics, since the compute offered by google collab varied a lot)\n",
+        "# and thus we had varying execution time for the same model training at times thus making it unfeasible metric\n",
         "start_time = time.time()\n",
         "history_1 = vgg_model_1.fit(train_ds, validation_data=val_ds, epochs=55, callbacks=[es])\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))\n"
@@ -1582,6 +1594,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Saved all the models in personal google drive and loaded them back for analysis\n",
         "vgg_model_1 = load_model(\"/content/drive/MyDrive/vgg_model_1.h5\")\n",
         "vgg_model_2 = load_model(\"/content/drive/MyDrive/vgg_model_2.h5\")\n",
         "vgg_model_3 = load_model(\"/content/drive/MyDrive/vgg_model_3.h5\")\n",
